# fisherman-cli

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  HISTORY.md  PLAN_SAISONS.md  README.md  TWITCH_TOKEN_MANUAL.md  audit.sh  build.rs  deploy.sh  docker-compose.yml  enrich.py  export.sh  prompt_ia_poissons.txt  prompt_system.md  startup.sh
data/: fail_messages.json  fish_data.json  fish_data_en.json  game_data.json  junk_data.json  junk_data_en.json  permanent_vips.json
data_old/: players_backup.json  streamer_tokens.json
migrations/: 20260524000000_init.sql  20260524000100_museum.sql  20260525000200_gambling_stats.sql  20260525000300_gambling_streaks.sql  20260526000400_trophy_stats.sql  20260530000500_player_language.sql  20260530000600_stream_live_dates.sql  20260531000700_remove_seasons.sql  20260603000800_eco_notoriety.sql  20260604000900_eco_champion_history.sql  20260608001000_scrap_metal.sql  20260608010800_daily_junk_event.sql  20260609001100_millionaire.sql
scratch/: extend_fun_facts.py  find_and_remove_bin_info.py  generate_cf_messages.py  generate_junk.py  update_batch.py  update_batch_1.py  update_batch_10.py  update_batch_2.py  update_batch_3.py  update_batch_4.py  update_batch_5.py  update_batch_6.py  update_batch_7.py  update_batch_8.py  update_batch_9.py  update_batch_fr.py  update_junk_util.py  validate_fish.py  validate_junk.py
src/: api.rs  auth.rs  bot.rs  config.rs  main.rs  tasks.rs
src/data/: game_data.json
src/db/: mod.rs  repository.rs
src/game/: generator.rs  mod.rs
src/models/: fish.rs  mod.rs  player.rs
static/: admin.html  app.js  index.html  obs.html  privacy.html  style.css
