[package]
name = "fisherman-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Web server
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# API & Auth
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"

# Twitch Integration
twitch-irc = { version = "5.0", features = ["transport-tcp-native-tls"] }

# Database (SQLite with async support)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Randomization
rand = "0.8"
rand_distr = "0.4"

# Configuration
dotenvy = "0.15"

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID support
uuid = { version = "1.7", features = ["v4", "serde"] }
